 2010-10-15 15:18  alexpeshkoff 
   M src/common/classes/array.h
   M src/common/classes/stack.h
   M src/common/classes/vector.h
Fixed issues, found by clang

 2010-10-15 14:54  alexpeshkoff 
   M builds/posix/make.defaults
Backported CORE-3185: Firebird compilation on a box, already running firebird server

 2010-10-15 09:07  alexpeshkoff 
   M configure.in
   M src/jrd/common.h
   M src/jrd/inf_pub.h
   M src/jrd/pag.cpp
   M src/jrd/utl.cpp
CORE-3184: Committed Damyan's patch - port for linux/hppa and linux/alpha

 2010-10-14 11:34  alexpeshkoff 
   M src/gpre/c_cxx.cpp
Ported fix for CORE-3022: gpre C++ compiler warnings with GCC 4.4.1

 2010-10-14 06:25  alexpeshkoff 
   M src/common/classes/objects_array.h
Fixed issue, detected by clang++ compiler

 2010-10-14 05:18  dimitr 
   M src/jrd/scl.epp
Misc.

 2010-10-13 12:47  alexpeshkoff 
   M builds/install/arch-specific/linux/misc/makeInstallImage.sh.in
   M configure.in
Fixed CORE-3166: Script changeMultiConnectMode.sh should not be present in SS environment

 2010-10-13 12:11  dimitr 
   M src/jrd/blb.cpp
   M src/jrd/cmp.cpp
   M src/jrd/cmp_proto.h
   M src/jrd/dfw.epp
   M src/jrd/irq.h
   M src/jrd/met.epp
   M src/jrd/met_proto.h
   M src/jrd/par.cpp
   M src/jrd/scl.epp
   M src/jrd/scl.h
   M src/jrd/scl_proto.h
   M src/jrd/vio.cpp
Fixed the major part of the slowdown in CORE-2827: Very slow prepare for complex interrelated metadata with many triggers indirectly involved in the operation being prepared.
Code cleanup.

 2010-10-08 11:58  hvlad 
   M src/jrd/dfw.epp
   M src/jrd/event.cpp
   M src/jrd/event_proto.h
   M src/jrd/jrd.cpp
Backported fix for bug CORE-3170 : Engine could enter infinite loop if EVENT's are posted but no subscribers exists

 2010-10-07 16:14  hvlad 
   M src/utilities/ntrace/TracePluginImpl.cpp
Backport fix for bug CORE-3168: exclude_filter doesn't work for <services></section> section of the Trace facility

 2010-10-06 15:39  asfernandes 
   M src/dsql/pass1.cpp