@@ -1,3 +1,15 @@
+ 2010-10-18 17:23  alexpeshkoff 
+   M src/jrd/dbg_proto.h
+Make it build using clang++ - thanks to marius
+
+ 2010-10-17 21:35  hvlad 
+   M src/jrd/idx.cpp
+Fixed bug CORE-3188 : page 0 is of wrong type (expected 6, found 1)
+
+ 2010-10-17 14:32  asfernandes 
+   M src/dsql/ddl.cpp
+Fixed CORE-3180 - ALTER VIEW with not matched columns in declaration and selection crashs the server
+
  2010-10-15 15:18  alexpeshkoff 
    M src/common/classes/array.h
    M src/common/classes/stack.h
